[gd_scene load_steps=11 format=3 uid="uid://t3ldqtgwocey"]

[ext_resource type="Script" path="res://scenes/aimtrainertest.gd" id="1_742fb"]
[ext_resource type="FontFile" uid="uid://cetsjqaghxe7e" path="res://ZTGatha-SemiBold.ttf" id="2_eud20"]
[ext_resource type="Texture2D" uid="uid://dm25hunhm62br" path="res://target2.drawio.png" id="3_55qcv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ed70r"]
bg_color = Color(1, 0.843137, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d2ijl"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gqjs5"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pos8m"]
bg_color = Color(1, 0.843137, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ks4wf"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_slow1"]
bg_color = Color(0.0666667, 0.317647, 0.45098, 1)

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wll72"]

[node name="aimtrainertest" type="Node"]
script = ExtResource("1_742fb")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.0666667, 0.317647, 0.45098, 1)

[node name="Title" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -174.5
offset_top = 112.0
offset_right = 169.5
offset_bottom = 165.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_eud20")
theme_override_font_sizes/font_size = 40
text = "Aim Trainer
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SubTitle" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -218.5
offset_top = 184.0
offset_right = 216.5
offset_bottom = 237.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_eud20")
theme_override_font_sizes/font_size = 24
text = "Hit 30 targets as quickly as you can"
horizontal_alignment = 1
vertical_alignment = 1

[node name="EndTitle" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -221.0
offset_top = -26.5
offset_right = 221.0
offset_bottom = 26.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_eud20")
theme_override_font_sizes/font_size = 24
text = "Go back and come back in to try again!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Remaining" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -216.0
offset_top = 8.0
offset_right = 219.0
offset_bottom = 61.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("2_eud20")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -88.0
offset_top = -34.0
offset_right = 88.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_eud20")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_ed70r")
theme_override_styles/hover = SubResource("StyleBoxFlat_d2ijl")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gqjs5")
text = "Start
"

[node name="BackButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 196.0
offset_right = 45.0
offset_bottom = 268.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_eud20")
theme_override_font_sizes/font_size = 24
theme_override_styles/normal = SubResource("StyleBoxFlat_pos8m")
theme_override_styles/hover = SubResource("StyleBoxFlat_ks4wf")
theme_override_styles/pressed = SubResource("StyleBoxFlat_slow1")
text = "Back
"

[node name="Target" type="Button" parent="."]
offset_left = -48.0
offset_top = -48.0
offset_right = 45.0
offset_bottom = 45.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_wll72")
icon = ExtResource("3_55qcv")
flat = true

[node name="TryTimer" type="Timer" parent="."]
wait_time = 4096.0
one_shot = true

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="BackButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="Target" to="." method="_on_target_pressed"]
